support for 'kh', 'sh' etc - still barebones

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Keyboard Transliterator</title>
+  <title>Advanced Keyboard Transliterator</title>
   <style>
     body {
       width: 300px;
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <h2>Keyboard Transliterator</h2>
+  <h2>Advanced Transliterator</h2>
   <p>Enable transliteration (Latin to Devanagari):</p>
   
   <label class="switch">
